syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "PartyProto";

package domain;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

import "date.proto";
import "timeofday.proto";
import "routines.proto";
import "condition.proto";
import "relay.proto";

// flat-ent: Party
message PartyFlatData {
    option (routines.entity_type) = "Party";
    option (routines.keys).keys = "party_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: partyId
    string party_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string party_type_id = 2 [(routines.opts).field_type = "id"];
    string external_id = 3 [(routines.opts).field_type = "id"];
    string preferred_currency_uom_id = 4 [(routines.opts).field_type = "id"];
    string description = 5 [(routines.opts).field_type = "very-long"];
    string status_id = 6 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp created_date = 7 [(routines.opts).field_type = "date-time"];
    string created_by_user_login = 8 [(routines.opts).field_type = "id-vlong"];
    google.protobuf.Timestamp last_modified_date = 9 [(routines.opts).field_type = "date-time"];
    string last_modified_by_user_login = 10 [(routines.opts).field_type = "id-vlong"];
    string data_source_id = 11 [(routines.opts).field_type = "id"];
    routines.Indicator is_unread = 12 [(routines.opts).field_type = "indicator"];
    google.protobuf.Timestamp last_updated_tx_stamp = 13 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 14 [(routines.opts).field_type = "date-time"];
    string tenant_id = 15 [(routines.opts).field_type = "id"];
     

    // extra
    google.protobuf.Struct extra = 204;
    map<string, google.protobuf.Any> attachments = 205 ;
}

message PartyKey{
    string party_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message PartyList{
    repeated PartyFlatData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListParties` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}

// Party Geo Location with history
message PartyGeoPointData {
    option (routines.entity_type) = "PartyGeoPoint";
    option (routines.keys).keys = "party_id, geo_point_id, from_date";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: partyId, geoPointId, fromDate
    // fields
    string party_id = 1 [(routines.opts).field_type = "id"];
    string geo_point_id = 2 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp from_date = 3 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp thru_date = 4 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp last_updated_tx_stamp = 5 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 6 [(routines.opts).field_type = "date-time"];
    string id = 7 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 10;
    map<string, google.protobuf.Any> attachments = 11;
}


message PartyGeoPointKey{
    string party_id = 1 [(routines.opts).field_type = "id"];
    string geo_point_id = 2 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp from_date = 3 [(routines.opts).field_type = "date-time"];
}

message PartyGeoPointList{
    repeated PartyGeoPointData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListPartyGeoPoints` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// flat-ent: Party Group
message PartyGroupFlatData {
    option (routines.entity_type) = "PartyGroup";
    option (routines.keys).keys = "party_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: partyId
    string party_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string group_name = 2 [(routines.opts).field_type = "name"];
    string group_name_local = 3 [(routines.opts).field_type = "name"];
    string office_site_name = 4 [(routines.opts).field_type = "name"];
    routines.Currency annual_revenue = 5 [(routines.opts).field_type = "currency-amount"];
    int64 num_employees = 6 [(routines.opts).field_type = "numeric"];
    string ticker_symbol = 7 [(routines.opts).field_type = "very-short"];
    string comments = 8 [(routines.opts).field_type = "comment"];
    string logo_image_url = 9 [(routines.opts).field_type = "url"];
    google.protobuf.Timestamp last_updated_tx_stamp = 10 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 11 [(routines.opts).field_type = "date-time"];
    string tenant_id = 12 [(routines.opts).field_type = "id"];
     

    // extra
    google.protobuf.Struct extra = 26;
    map<string, google.protobuf.Any> attachments = 27 ;
}

message PartyGroupKey{
    string party_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message PartyGroupList{
    repeated PartyGroupFlatData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListPartyGroups` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}

// Party Identification
message PartyIdentificationData {
    option (routines.entity_type) = "PartyIdentification";
    option (routines.keys).keys = "party_id, party_identification_type_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: partyId, partyIdentificationTypeId
    // fields
    string party_id = 1 [(routines.opts).field_type = "id"];
    string party_identification_type_id = 2 [(routines.opts).field_type = "id"];
    string id_value = 3 [(routines.opts).field_type = "id-long"];
    google.protobuf.Timestamp last_updated_tx_stamp = 4 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 5 [(routines.opts).field_type = "date-time"];
    string id = 6 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 9;
    map<string, google.protobuf.Any> attachments = 10;
}


message PartyIdentificationKey{
    string party_id = 1 [(routines.opts).field_type = "id"];
    string party_identification_type_id = 2 [(routines.opts).field_type = "id"];
}

message PartyIdentificationList{
    repeated PartyIdentificationData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListPartyIdentifications` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// flat-ent: Party Identification Type
message PartyIdentificationTypeFlatData {
    option (routines.entity_type) = "PartyIdentificationType";
    option (routines.keys).keys = "party_identification_type_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: partyIdentificationTypeId
    string party_identification_type_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string parent_type_id = 2 [(routines.opts).field_type = "id"];
    routines.Indicator has_table = 3 [(routines.opts).field_type = "indicator"];
    string description = 4 [(routines.opts).field_type = "description"];
    google.protobuf.Timestamp last_updated_tx_stamp = 5 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 6 [(routines.opts).field_type = "date-time"];
    string tenant_id = 7 [(routines.opts).field_type = "id"];
     

    // extra
    google.protobuf.Struct extra = 12;
    map<string, google.protobuf.Any> attachments = 13 ;
}

message PartyIdentificationTypeKey{
    string party_identification_type_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message PartyIdentificationTypeList{
    repeated PartyIdentificationTypeFlatData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListPartyIdentificationTypes` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}

// flat-ent: Party Relationship
message PartyRelationshipFlatData {
    option (routines.entity_type) = "PartyRelationship";
    option (routines.keys).keys = "party_id_from, party_id_to, role_type_id_from, role_type_id_to, from_date";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: partyIdFrom, partyIdTo, roleTypeIdFrom, roleTypeIdTo, fromDate
    string party_id_from = 1 [(routines.opts).field_type = "id"];
    string party_id_to = 2 [(routines.opts).field_type = "id"];
    string role_type_id_from = 3 [(routines.opts).field_type = "id"];
    string role_type_id_to = 4 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp from_date = 5 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp thru_date = 6 [(routines.opts).field_type = "date-time"];
    string status_id = 7 [(routines.opts).field_type = "id"];
    string relationship_name = 8 [(routines.opts).field_type = "name"];
    string security_group_id = 9 [(routines.opts).field_type = "id"];
    string priority_type_id = 10 [(routines.opts).field_type = "id"];
    string party_relationship_type_id = 11 [(routines.opts).field_type = "id"];
    string permissions_enum_id = 12 [(routines.opts).field_type = "id"];
    string position_title = 13 [(routines.opts).field_type = "name"];
    string comments = 14 [(routines.opts).field_type = "comment"];
    google.protobuf.Timestamp last_updated_tx_stamp = 15 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 16 [(routines.opts).field_type = "date-time"];
    string id = 17 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string tenant_id = 18 [(routines.opts).field_type = "id"];
     

    // extra
    google.protobuf.Struct extra = 30;
    map<string, google.protobuf.Any> attachments = 31 ;
}

message PartyRelationshipKey{
    string party_id_from = 1 [(routines.opts).field_type = "id"];
    string party_id_to = 2 [(routines.opts).field_type = "id"];
    string role_type_id_from = 3 [(routines.opts).field_type = "id"];
    string role_type_id_to = 4 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp from_date = 5 [(routines.opts).field_type = "date-time"];
}

message PartyRelationshipList{
    repeated PartyRelationshipFlatData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListPartyRelationships` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}

// Party Role
message PartyRoleData {
    option (routines.entity_type) = "PartyRole";
    option (routines.keys).keys = "party_id, role_type_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: partyId, roleTypeId
    // fields
    string party_id = 1 [(routines.opts).field_type = "id"];
    string role_type_id = 2 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp last_updated_tx_stamp = 3 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 4 [(routines.opts).field_type = "date-time"];
    string id = 5 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 70;
    map<string, google.protobuf.Any> attachments = 71;
}


message PartyRoleKey{
    string party_id = 1 [(routines.opts).field_type = "id"];
    string role_type_id = 2 [(routines.opts).field_type = "id"];
}

message PartyRoleList{
    repeated PartyRoleData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListPartyRoles` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// Tracks a history of the status of a Party
message PartyStatusData {
    option (routines.entity_type) = "PartyStatus";
    option (routines.keys).keys = "status_id, party_id, status_date";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: statusId, partyId, statusDate
    // fields
    string status_id = 1 [(routines.opts).field_type = "id"];
    string party_id = 2 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp status_date = 3 [(routines.opts).field_type = "date-time"];
    string change_by_user_login_id = 4 [(routines.opts).field_type = "id-vlong"];
    google.protobuf.Timestamp last_updated_tx_stamp = 5 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 6 [(routines.opts).field_type = "date-time"];
    string id = 7 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 11;
    map<string, google.protobuf.Any> attachments = 12;
}


message PartyStatusKey{
    string status_id = 1 [(routines.opts).field_type = "id"];
    string party_id = 2 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp status_date = 3 [(routines.opts).field_type = "date-time"];
}

message PartyStatusList{
    repeated PartyStatusData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListPartyStatuses` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// flat-ent: Person
message PersonFlatData {
    option (routines.entity_type) = "Person";
    option (routines.keys).keys = "party_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: partyId
    string party_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string salutation = 2 [(routines.opts).field_type = "name"];
    string first_name = 3 [(routines.opts).field_type = "name"];
    string middle_name = 4 [(routines.opts).field_type = "name"];
    string last_name = 5 [(routines.opts).field_type = "name"];
    string personal_title = 6 [(routines.opts).field_type = "name"];
    string suffix = 7 [(routines.opts).field_type = "name"];
    string nickname = 8 [(routines.opts).field_type = "name"];
    string first_name_local = 9 [(routines.opts).field_type = "name"];
    string middle_name_local = 10 [(routines.opts).field_type = "name"];
    string last_name_local = 11 [(routines.opts).field_type = "name"];
    string other_local = 12 [(routines.opts).field_type = "name"];
    string member_id = 13 [(routines.opts).field_type = "id"];
    routines.Indicator gender = 14 [(routines.opts).field_type = "indicator"];
    google.type.Date birth_date = 15 [(routines.opts).field_type = "date"];
    google.type.Date deceased_date = 16 [(routines.opts).field_type = "date"];
    double height = 17 [(routines.opts).field_type = "floating-point"];
    double weight = 18 [(routines.opts).field_type = "floating-point"];
    string mothers_maiden_name = 19 [(routines.opts).field_type = "long-varchar"];
    string marital_status_enum_id = 20 [(routines.opts).field_type = "id"];
    string social_security_number = 21 [(routines.opts).field_type = "long-varchar"];
    string passport_number = 22 [(routines.opts).field_type = "long-varchar"];
    google.type.Date passport_expire_date = 23 [(routines.opts).field_type = "date"];
    double total_years_work_experience = 24 [(routines.opts).field_type = "floating-point"];
    string comments = 25 [(routines.opts).field_type = "comment"];
    string employment_status_enum_id = 26 [(routines.opts).field_type = "id"];
    string residence_status_enum_id = 27 [(routines.opts).field_type = "id"];
    string occupation = 28 [(routines.opts).field_type = "name"];
    int64 years_with_employer = 29 [(routines.opts).field_type = "numeric"];
    int64 months_with_employer = 30 [(routines.opts).field_type = "numeric"];
    routines.Indicator existing_customer = 31 [(routines.opts).field_type = "indicator"];
    string card_id = 32 [(routines.opts).field_type = "id-long"];
    google.protobuf.Timestamp last_updated_tx_stamp = 33 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 34 [(routines.opts).field_type = "date-time"];
    string tenant_id = 35 [(routines.opts).field_type = "id"];
     

    // extra
    google.protobuf.Struct extra = 51;
    map<string, google.protobuf.Any> attachments = 52 ;
}

message PersonKey{
    string party_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message PersonList{
    repeated PersonFlatData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListPeople` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}

