syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "PartySubtypesProto";

package party;

import "routines.proto";
import "relay.proto";
import "common_options.proto";

import "ents/product_supplier.proto";
import "extra/party_agreement.proto";
import "ents/party_party.proto";


message SupplierProto {
  option (routines.links) = "ToAgreement, FromAgreement";
  option (bluecc.bundle_name) = "Party";
  string id = 1 [(google.api.graphql.relay_options).id = true];
  domain.PartyFlatData party=2;
  // components
  domain.SupplierProductList supplier_products=3;
  domain.AgreementRoleList agreement_roles=4;
  domain.SupplierProductFeatureList supplier_product_features=5;
  domain.PartyGroupFlatData party_group=6;
}

message PersonProto {
  option (routines.links) = "";
  option (bluecc.bundle_name) = "Party";
  string id = 1 [(google.api.graphql.relay_options).id = true];
  domain.PartyFlatData party=2;
  // components
  domain.PersonFlatData person=3;
}

message PartyGroupProto {
  option (routines.links) = "";
  option (bluecc.bundle_name) = "Party";
  string id = 1 [(google.api.graphql.relay_options).id = true];
  domain.PartyFlatData party=2;
  // components
  domain.PartyGroupFlatData party_group=3;
}

message CorporationProto {
  option (routines.links) = "";
  option (bluecc.bundle_name) = "Party";
  string id = 1 [(google.api.graphql.relay_options).id = true];
  domain.PartyFlatData party=2;
  // components
  domain.PartyGroupFlatData party_group=3;
}

